@@ -50,6 +50,6 @@ To add the package:
  * [ ] Rename opt: -y -> -O
  * [ ] Add: opaque S,pagesizes
  * [X] Change: -p output [ID] -> [OID]
- * [ ] Change: xml \<id\>\<level1\>X\</level1\>\<level2\>Y\</level2\>\</id\> -> \<OID\>X.Y\</OID\>
+ * [X] Change: xml \<id\>\<level1\>X\</level1\>\<level2\>Y\</level2\>\</id\> -> \<OID\>X.Y\</OID\>
  * [ ] Update manual
  
